
option java_outer_classname="TaskProgressCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message TaskProgressCommand {
	optional int64 requestId = 1;
	optional string taskId = 2;
}